--- a/webpage.html
+++ b/webpage.html
@@ -34,6 +34,9 @@
         </div>
 
         <div id = "gameScreen">
+            <button id="backButton">
+                Back
+            </button>
 
         </div>
         
