alert message chane

--- a/webpage.html
+++ b/webpage.html
@@ -11,7 +11,7 @@
         <div id = "startScreen">
                 
             <h1>
-                GawiPawiBo
+                GawiBawiBo
             </h1>
             <h2>
                 Wanna play rock, paper, scissors? Lets play
